--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s" style="background-color: #E0F0F6">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay="0.6s" style="background-color: #E0F0F6">
+
 							<img style="width:100%;" src="images/thriveindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.6s">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.6s">
 
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
@@ -93,10 +94,10 @@
 			<div class="project img-hover-zoom">
 				<a href="lexmark.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.4s" style="background-color: #E3F0E6">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay="0.4s" style="background-color: #E3F0E6;">
 							<img style="width:100%;" src="images/lexmarkindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.4s">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.4s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Redesign at Lexmark</h3>
@@ -115,10 +116,10 @@
 			<div class="project img-hover-zoom">
 				<a href="pawls.html">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".5s" style="background-color: #E5EAFB">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #E5EAFB">
 							<img style="width:100%;" src="images/pawlsindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Pawls</h3>
@@ -139,10 +140,10 @@
 				<a href="vrgarden.html">
 					<div class="row">
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".5s" style="background-color: #FFE3E3">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #FFE3E3">
 							<img style="width:100%;" src="images/vrgardenindex.png">
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Virtual Garden</h3>
