--- a/thrive.html
+++ b/thrive.html
@@ -112,18 +112,22 @@
 									What features are they looking for?
 
 								</p>
-					</div><br>
+					</div>
 
 </div>
+</div>
+</section>
 
+<section>
+<div class=" content-wrapper900">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>The Solution</h3>
 			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
 	</div>
-	</div>
+</div></div></section>
 
-	<div class="row">
+	<div class="row contentblock"  style="max-width:1200px;">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<img src="images/thriveinfo.png" class="img-responsive">
 
