--- a/pawls.html
+++ b/pawls.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +8,11 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-144593656-1');
 	</script>
-
 	<!-- SITE TITLE -->
-	<title>PAWLS</title>
+	<title>Pawls | Michelle Kim's Portfolio</title>
+
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,44 +20,41 @@
 	<meta name="description" content="">
 
 	<!-- STYLESHEET CSS FILES -->
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/project.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
 	<section id= "navbar" class="navbar custom-navbar" role="navigation">
-
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand">민진
-</a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="nav-menu-item"><a href="index.html">work</a></li>
-					 <li class="nav-menu-item"><a href="about.html">about</a></li>
-					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
-				</ul>
-			</div>
+		<div class="navbar-header">
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+			<a href="index.html" class="navbar-brand">back</a>
+		</div>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="nav-menu-item"><a href="index.html">work</a></li>
+				<li class="nav-menu-item"><a href="about.html">about</a></li>
+				<li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+			</ul>
+		</div>
 	</section>
 
 <div class="progress-wrap">
@@ -66,165 +63,112 @@
 	</svg>
 </div>
 
-<section id="overview">
-	<div class="container">
-				<div class="content">
+<section>
+	<div class="content-wrapper900">
 		<div class="row">
-			<div class="col-md-12 col-sm-12 text-center">
-				<p class="title bold">Helping Owners and Their Dogs Stay Together</p><br>
-				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile + Pervasive Computing</h4>
-				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;"> Sept - Dec 2019 </h4>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section id="overviewimg" class="pinkbg">
-	</div>
-		<img src="images/pawlspage.png" alt="manager" width="100%">
-</div>
-</div>
-</section>
-
-<section id="graybg">
-	<div class="container">
-		<div class="content">
-			<div class="row">
-
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h3>OVERVIEW</h3>
-<p class="mont">PAWLS is a training solution that decreases disruptive barking in dogs
-
-</p><br>
-	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-		<h3>CONTRIBUTIONS</h3>
-		<p>Soley designed mobile app on Figma<br>
-		Conducted user research (diary studies, user enactments, interviews, & surveys)<br><br><br>
-</div>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-<img src="images/pawlsteam.png" class="img-responsive">
-</div>
-
-</div>	</div>
-
-</section>
-
-<section id="section">
-	<div class="container">
-		<div class="content">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3>MOTIVATION</h3>
-			<p class="mont">How can we address the issue of pet homelessness?
-			</p><br><br>
-				</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img style="width:35%;" src="images/pawlsdog.png" class="img-responsive center"><br><br>
-
-	<p>By reducing the risk of failed adoptions</p>
-
-
-</div>
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-	<img style="width:35%;" src="images/pawlscollar.png" class="img-responsive center">
-	<p>By assisting current dog owners so that their dogs aren't given up to shelters</p>
-
-</div>
-
-			</div>
-		</div>
-	</div>
-</section>
-
-
-<section id="graybg">
-	<div class="container">
-			<div class="content">
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12">
-			<h3>DESIGN OPPORTUNITY</h3>
-		</div>
-	</div>
-	<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<p class="mont">A dog's behavioral issue is the number one reason why dogs are given up to shelters</p><br><br>
-			<p>
-Barking, whining, and other maladaptive noise-related behavior were among the most common issues experienced by newly adoptive pet owners.<br><br></p></div>
-
+				<h1 style="text-align:center;">Pawls</h1>
+<h2 style="text-align:center; padding-bottom: 1.5em;">IoT tech that decreases disruptive dog barking</h2>
+			</div>
 		</div>
-<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp">
-							<img src="images/pawlsquotes.png" class="img-responsive center" style="max-width:100%">
-						</div>
-					</div>
-
-		</section>
-
-<section id="solutionwhite">
-		<div class="container">
-			<div class="content">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>SOLUTION</h3>
-
-					<p class="mont">A smart crate system paired with a mobile app
-
-</div>
-</div>
-<br><br>
-<div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12">
-<img src="images/pawlsfeatures.png" class="img-responsive center" style="max-width:100%">
-</div>
-</div><br><br><br><br>
+	</div>
 </section>
 
-		<section style="background-color: #E5EAFB; padding-bottom: 130px;"><br><br><br><br>
+<section id=introimg>
+	<img src="images/pawlspage.png" class="img-responsive">
+</section>
+
+
+<section>
+<div class="contentblock content-wrapper900" style="padding-top: 3em;">
+	<div class="row">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<p class="overview-info">Duration</p>
+			<p>Fall 2019 course project</p>
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<p class="overview-info">Team </p>
+			<p>Michelle- Product Designer <br>Corbet- Hardware Engineer<br>Chloe- Illustrator <br>Shriya- Front End Developer</p><br>
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<p class="overview-info">Role</p>
+			<p>As the sole product designer, I was responsible for the app design. All four team members took part in conducting user research and content strategy. After the course ended, I was not completely satisfied with the end product, so as an individual, I continued to iterate and took a shot at designing for dark mode. </p>
+		</div>
+	</div>
+	</div>
+</section>
+
+
+
+	<section>
+	<div class="contentblock content-wrapper900">
+			<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<h4>Overview</h4>
+							</div></div>
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<h3>The Motivation</h3>
+									<p>
+
+										The team as a whole absolutely adored dogs and we were concerned with the issue of pet homelessness. To address this issue, we decided to explore how we can reduce risk of failed dog adoptions by assisting current dog owners to not give up their pets.
+						</p>
+						</div>
+
+	</div>
+	</div>
+	</section>
+
+	<section>
+	<div class="contentblock content-wrapper900">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<h3>Design Opportunity</h3>
+									<p>Survey(466) results showed that a dogs's behavioral issue is the number one reason why dogs are given up to shelters. The most frequently reported issues included barking, whining, and other maladaptive noise-related behavior. During interviews(6), we learned that dog owners felt current solutions could be augmented further and they were willing to invest in effective solutions.
+						</p>
+						</div>
+
+	</div>
+	</div>
+	</section>
+
+	<section>
+	<div class="contentblock content-wrapper900">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<h3>The Solution</h3>
+									<p>Using Arduino technology, code, and Figma, our team created a smart crate system that can be controlled with a mobile app.
+
+						</p>
+						</div>
+
+	</div>
+	</div>
+	</section>
+		<section style="padding-bottom: 130px;">
 					<div class="row">
 								<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
-										<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
+										<img src="images/pawlsfeatures.png" class="img-responsive center" style="max-width:100%">
 								</div>
 							</div>
 				</section>
 
 
-				<section id="section">
-						<div class="container">
-							<div class="content">
-							<div class="row">
-								<div class="col-lg-12 col-md-12 col-sm-12">
-									<h3>PROCESS</h3>
+				<section>
+				<div class="contentblock content-wrapper900">
+										<div class="row">
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-									<p class="mont">Research to product
+												<h4>The Research</h4>
 
-				</div>
-				</div>
-				<br><br>
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-				<img src="images/pawlsprocess.png" class="img-responsive center" style="max-width:100%">
-				</div>
-				</div>
-				</section>
+												<h3>Diary Study</h3>
 
-
-				<section id="graybg">
-						<div class="container">
-							<div class="content">
-							<div class="row">
-								<div class="col-lg-12 col-md-12 col-sm-12">
-									<h3>DIARY STUDY</h3>
 
 									<p class="mont">How do dog owners address disruptive barking?
 
 				</div>
 				</div>
-				<br><br>
+				<br>
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 
@@ -235,18 +179,19 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 				</div>
 				</section>
 
-				<section id="section">
-						<div class="container">
-							<div class="content">
-							<div class="row">
-								<div class="col-lg-12 col-md-12 col-sm-12">
-									<h3>IDEATION</h3>
+				<section>
+				<div class="contentblock content-wrapper900">
+										<div class="row">
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+												<h4>Content Strategy</h4>
+
+												<h3>Ideation</h3>
 
 									<p class="mont">A “smart-playpen” that influences the five senses
 
 				</div>
 				</div>
-				<br><br>
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<p> When the “smart-playpen” senses a dog barking incessantly:<br>
@@ -264,20 +209,15 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 				</div>
 				</section>
 
-				<section id="graybg">
-						<div class="container">
-							<div class="content">
-							<div class="row">
-								<div class="col-lg-12 col-md-12 col-sm-12">
-									<h3>USER ENACTMENTS</h3>
-
-									<p class="mont">What do users think about PAWLS, the smart dog crate?
+				<section>
+				<div class="contentblock content-wrapper900">
+										<div class="row">
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												<h3>User Enactments</h3>
+			<p class="mont">What do users think about PAWLS, the smart dog crate?
 				</div>
 				</div>
-				<br><br>
-
-
-				<div class="row">
+				<br>
 					<div class="col-lg-6 col-md-6 col-sm-6">
 				<img src="images/userenact.jpeg" class="img-responsive center" style="max-width:75%"><br>
 			</div>
@@ -286,9 +226,6 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 				<img src="images/userenact2.jpeg" class="img-responsive center" style="max-width:75%">
 			</div>
 
-				</div>
-
-				<br><br>
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
@@ -301,7 +238,7 @@ Barking, whining, and other maladaptive noise-related behavior were among the mo
 				</section>
 
 				<section id="section">
-						<div class="container">
+						<div class="container contentblock">
 							<div class="content">
 							<div class="row">
 								<div class="col-lg-12 col-md-12 col-sm-12">
@@ -332,28 +269,26 @@ System should empower the user to make decisions that affect their companion and
 				</div>
 				</section>
 
-				<section id="solutiongray">
-					<div class="container">
-							<div class="content">
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12">
-							<h3>FINAL SYSTEM PROPSAL</h3>
+				<section>
+				<div class="content-wrapper900">
+										<div class="row">
+											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												<h3>Final System Proposal</h3>
 						</div>
 					</div>
 					<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p class="mont">Arduino technology for hardware & software
-</p><br><br>
+								<p>Arduino technology for hardware & software
+</p>
 							</div>
 									</div>
 
 						</section>
 
-						<section style="background-color: #f9f9f9; padding-bottom: 130px;">
-							<div class="container">
+						<section style="padding-bottom: 130px;">
+							<div class="container contentblock">
 												<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
 														<br><br>				<img src="images/pawlsarduino.png" class="img-responsive center" style="max-width:100%">
-<br>
 												</div>
 											</div>
 								</section>
@@ -378,13 +313,7 @@ System should empower the user to make decisions that affect their companion and
 								</div><br><br><br><br>
 								</section>
 
-										<section style="background-color: #EDEBAB; padding-bottom: 130px;"><br><br><br><br>
-													<div class="row">
-																<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
-																		<br><img src="images/pawlsinfo.png" class="img-responsive center" style="max-width:100%">
-																</div>
-															</div>
-												</section>
+
 
 
 												<section id="section">
