--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 	<body>
 		<section id= "navbar" class="navbar custom-navbar" role="navigation">
@@ -45,9 +43,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="nav-menu-item active"><a href="index.html">work</a></li>
-						 <li class="nav-menu-item"><a href="about.html">about</a></li>
-						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+						<li class="nav-menu-item active"><a href="index.html">Work</a></li>
+						 <li class="nav-menu-item"><a href="about.html">About</a></li>
+						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">Resume</a></li>
 					</ul>
 				</div>
 		</section>
@@ -59,7 +57,8 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	 				<h1>I'm Michelle Kim, a human-centered product designer. <br><br>I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h1>
+	 				<h1 style="text-align: center;">MICHELLE KIM - PRODUCT DESIGNER</h1>
+						<h2 style="text-align: center;">I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h2>
 				</div></div>
 </div>
 			</section>
