--- a/pawls.html
+++ b/pawls.html
@@ -238,7 +238,7 @@
 				</section>
 
 				<section id="section">
-						<div class="container contentblock">
+						<div class="container contentblock content-wrapper900">
 							<div class="content">
 							<div class="row">
 								<div class="col-lg-12 col-md-12 col-sm-12">
@@ -317,12 +317,12 @@ System should empower the user to make decisions that affect their companion and
 
 
 												<section id="section">
-														<div class="container">
+														<div class="container content-wrapper900">
 															<div class="content">
 																<div class="row">
 	 													 		 <div class="col-md-12 col-sm-12">
-	 													 			 <h3>REFLECTION</h3>
-	 													 			 <p class="mont">What I learned</p>
+																	 <h4>Reflection</h4>
+	 													 			 <h3>What I learned</h3>
 	 													 			 </div>
 	 													 		 </div>
 	 													 		 <br>
@@ -333,8 +333,8 @@ System should empower the user to make decisions that affect their companion and
 	 													 			 <br><br>
 																	 Design is political. After the final demo, I realized there is high potential for this product to not be available to lower income families. This product will only be consumed by a people from a specific income bracket.
 																	 <br><br>Design needs to be based on needs made evident through discussion with those the design affects.<br><br><br><br>
+																	 <h3>Where to Improve</h3>
 
-	 													 				<p class="mont">Where to improve</p>
 	 													 				<p><br>
 	 													 				Practice prototyping with Framer and After effects to practice motion design.</p>
 
