--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="nav-menu-item"><a href="index.html">work</a></li>
-						 <li class="nav-menu-item active"><a href="about.html">about</a></li>
-						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+						<li class="nav-menu-item"><a href="index.html">Work</a></li>
+						 <li class="nav-menu-item active"><a href="about.html">About</a></li>
+						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">Resume</a></li>
 					</ul>
 				</div>
 		</section>
