--- a/thrive.html
+++ b/thrive.html
@@ -46,13 +46,13 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="index.html" class="navbar-brand">back</a>
+			<a href="index.html" class="navbar-brand">Back</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li class="nav-menu-item"><a href="index.html">work</a></li>
-				<li class="nav-menu-item"><a href="about.html">about</a></li>
-				<li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+				<li class="nav-menu-item"><a href="index.html">Work</a></li>
+				<li class="nav-menu-item"><a href="about.html">About</a></li>
+				<li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">Resume</a></li>
 			</ul>
 		</div>
 	</section>
