--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	 				<h1 class="h1exception">73 words about me & my design process</h1>
+	 				<h1 class="h1exception" style="font-family: .3em;">73 words about me & my design process</h1>
 				</div></div>
 				<div class="row">
 
