--- a/thrive.html
+++ b/thrive.html
@@ -27,6 +27,8 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/project.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 
 	<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -63,8 +65,11 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1 style="text-align:center;">Thrive</h1>
-<h2 style="text-align:center; padding-bottom: 1.5em;">Helping people eat less meat</h2>
+					<h1>Thrive</h1>
+<h2 style="padding-bottom: 1.5em;">
+Thrive is a mobile app-based solution that helps people eat less meat. The most crucial feature of this app is the daily logging of a meat-free day.
+
+</h2>
 				</div>
 			</div>
 		</div>
@@ -79,62 +84,58 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Role</p>
-				<p style="line-height:0em;"> Product Designer</p>
+				<p style="line-height:1.5em;"> Product Designer</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Duration</p>
-				<p style="line-height:0em;"> 5 months</p>
+				<p style="line-height:1.5em;"> 5 months</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Tools</p>
-				<p style="line-height:0em;">Sketch, InVision</p>
+				<p style="line-height:1.5em;">Sketch, InVision,<br>Currently tinkering w/ Principle</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Type</p>
-				<p style="line-height:0em;">Individual Side Project</p>
+				<p style="line-height:1.5em;">Individual Side Project</p>
 			</div>
 		</div>
 		</div>
 	</section>
 
 <section>
-<div class="contentblock content-wrapper900">
+	<div class="contentblock content-wrapper900">
 		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Introduction</h4>
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>The Problem</h3>
-								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts" style="color:#2E3542;">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to explore ways to help people eat less meat.<br><br>
-									How can I as a product designer, help people eat less meat? <br>
-									Who is my user group? <br>
-									What features are they looking for?
-
-								</p>
-					</div>
-
-</div>
-</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h4>INTRODUCTION</h4>
+			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h3>The Problem</h3>
+				<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change and I wanted to address this issue.<br><br>
+				How can I as a product designer, help people eat less meat? <br>
+				Who is my target group? <br>
+				What features are they looking for?
+				</p>
+			</div>
+		</div>
+	</div>
 </section>
 
 <section>
-<div class="content-wrapper900">
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h3>The Solution</h3>
-			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
+	<div class="content-wrapper900">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h3>The Solution</h3>
+				<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
+			</div>
+		</div>
 	</div>
-</div></div></section>
+</section>
+
 <section>
-<div class="row contentblock center"  style="max-width:1200px;">
+	<div class="row contentblock center"  style="max-width:1200px;">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<img src="images/thriveinfo.png" class="img-responsive">
-
-
-</div>
-</div>
-
+		</div>
 	</div>
 </section>
 
