--- a/thrive.html
+++ b/thrive.html
@@ -20,7 +20,8 @@
 	<meta name="description" content="">
 
 	<!-- STYLESHEET CSS FILES -->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -30,16 +31,15 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
-	<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
+
+
 <body>
 	<section id= "navbar" class="navbar custom-navbar" role="navigation">
 		<div class="navbar-header">
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>Thrive</h1>
 <h2 style="padding-bottom: 1.5em;">
-Thrive is a mobile app-based solution that helps people eat less meat. The most crucial feature of this app is the daily logging of a meat-free day.
+Thrive is a mobile app-based solution that helps people eat less meat.
 
 </h2>
 				</div>
@@ -110,10 +110,9 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h3>The Problem</h3>
-				<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change and I wanted to address this issue.<br><br>
+				<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change.<br><br>
 				How can I as a product designer, help people eat less meat? <br>
-				Who is my target group? <br>
-				What features are they looking for?
+				Who is my target group? And what problems are they trying to solve?
 				</p>
 			</div>
 		</div>
@@ -125,7 +124,7 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h3>The Solution</h3>
-				<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
+				<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing them with positive encouragement, social support, and the tools they need to succeed.</p><br>
 			</div>
 		</div>
 	</div>
@@ -146,18 +145,19 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>The Research</h4>
+				<h4>The research - User Interviews
+					</h4>
 </div></div>
 
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-								<h3>User Interviews <span style="font-weight: normal;"> (10)</span> & Key Insights </h3>
+								<h3>People have different motivations but similar challenges</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>My goal was to gather information about the struggles vegans faced when it came to maintaining their diet, the obstacles non-vegans saw in their journey to become vegan, and the different motivations behind veganism.
+								<p>I opted for interviews over surveys because I wanted to explore people's narratives and the nuances of their individual experiences. Questions centered around identifying different <span style="font-weight:600;">motivations</span> behind veganism, <span style="font-weight:600;">struggles</span> vegans faced when maintaining their diet, and<span style="font-weight:600;"> obstacles </span>non-vegans inititally had to overcome.
 </p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 
@@ -173,14 +173,19 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 </section>
 
 <div class="contentblock content-wrapper900">
-		<div class="row">
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h4>The research - Competitive Analysis</h4>
+</div></div>
+
+					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>Competitive Analysis Discovery</h3>
+								<h3>There was still room for a solution</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>My goal was to discover if there were still room for a solution that addressed all 4 interview insights. Examining the pro-veganism apps in the market showed me that the problem space didn't have an all-in-one solution yet.</p><br>
+								<p>My goal was to discover if there was a solution that addressed all 4 interview insights. Examining the pro-veganism apps in the market showed me that the problem space didn't have an all-in-one solution yet.</p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -194,13 +199,14 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Discovering Design Opportunities</h4>
-								<h3>Personas</h3>
+							<!-- <h4>Discovering Design Opportunities</h4> -->
+							<h4>The Synthesis - Personas</h4>
+			</div></div>
 
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>With the interview data, I created 3 personas: 1 vegan and 2 omnivores who wanted to become vegan for different reasons. These personas ensured that every design decision looped back to meet user needs.
+								<div class="row">
+									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+											<h3>Users want to be reminded of their positive impact</h3>
+								<p>I discovered that the target group can be encouraged in one same way. Regardless of their motivation, users wanted reminders about their positive impact resulting from having gone meat-free.
 								</p><br>
 								<div class="w3-content w3-display-container">
 
@@ -234,12 +240,14 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>Journey Maps</h3>
+							<!-- <h4>Discovering Design Opportunities</h4> -->
+							<h4>The Synthesis - journey maps</h4>
+			</div></div>
 
-						</div></div>
-						<div class="row link">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of many problems discovered in the interviews: <span style="font-weight:bold;">(1)</span> lack of experience with vegan recipes and<span style="font-weight:bold;"> (2)</span> inability to connect with people who are vegan.
+								<div class="row">
+									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+											<h3>Users want a convenient, resourceful solution</h3>
+								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of problems discovered in the interviews: <span style="font-weight:bold;">(1)</span> lack of experience with vegan recipes and<span style="font-weight:bold;"> (2)</span> inability to connect with people who are vegan.
 
 
 								</p>
@@ -255,14 +263,20 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Ideation</h4>
-							<h3>Product requirements</h3>
+							<h4>Ideation </h4>
+							<h3 style="line-height: 1.5em;">My product will be motivating, convenient, & resourceful</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating. I determined that the more the users turn to my solution, the more effective my solution will be.
-									<br><br><img src="images/thriveideation.png" class="img-responsive">
+									<br><br>
+									<span style="font-weight:600;">1. Thrive needs to motivate</span><br>
+									Include weekly "meat-free day" goal and display metrics about users' positive impact on the world<br>
+								<span style="font-weight:600;">2. Thrive needs to be convenient</span><br>
+									Users should not experience a waiting time when they are inputting or expecting data<br>
+								<span style="font-weight:600;">3. Thrive needs to be resourceful</span><br>
+						To be useful, provide what users lack: (1) vegan recipes and (2) a platform where people can connect<br>
 								</p>
 								<!-- <img src="images/thrivediverging.png" class="img-responsive"> -->
 						</div>
@@ -275,8 +289,8 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Design</h4>
-								<h3>The Experience & User Flow</h3><br>
+							<h4>content strategy - site hierarchy</h4>
+								<h3>Seamless experience & user flow</h3><br>
 									<p>After reviewing the product requirements, I decided my solution would be a mobile app due to its convenience for daily use. I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
  </p><br>
 
@@ -310,10 +324,10 @@ Thrive is a mobile app-based solution that helps people eat less meat. The most 
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Design Decisions</h4>
-								<h3>Wireframes and Feedback</h3>
+							<h4>Design Decisions - A/B TESTS of wireframes</h4>
+								<h3>When in doubt? Turn to users</h3>
 								<p>I created wireframes of the "Achievements" feature and ran A/B tests. The A/B tests helped me figure out what users preferred in terms of the ease of digesting the content, entering data, and visual appeal.<br><br>
-</p><br><br>
+</p><br>
 						</div></div>
 
 						<div class="row">
