--- a/thrive.html
+++ b/thrive.html
@@ -361,18 +361,21 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>Design Decisions Continued</h3>
-<p></p>
-						</div></div><br><br><br><br>
+							<h4>Design decisions - Iterating on feedback</h4>
+								<h3>Simplifying the process with every iteration </h3>
+								<p>I carefully considered the feedback received from potential users and a  senior designer I connected with on LinkedIn. With each iteration, the experience was simplified and improved.
+</p><br>
+						</div></div>
+
 						<div class="row">
-							<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<p>
 								</p>
 								<img src="images/thriveiteration1.png" class="img-responsive">
 						</div>
 </div><br><br><br><br><br><br>
 <div class="row">
-	<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<p>
 		</p>
 		<img src="images/thriveiteration2.png" class="img-responsive">
