--- a/thrive.html
+++ b/thrive.html
@@ -180,7 +180,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>There was still room for a solution</h3>
+								<h3>Current products weren't solving the problem</h3>
 
 						</div></div>
 						<div class="row">
@@ -289,7 +289,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>content strategy - site hierarchy</h4>
+							<h4>content strategy - app hierarchy</h4>
 								<h3>Seamless experience & user flow</h3><br>
 									<p>After reviewing the product requirements, I decided my solution would be a mobile app due to its convenience for daily use. I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
  </p><br>
@@ -362,7 +362,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Design decisions - Iterating on feedback</h4>
-								<h3>Simplifying the process with every iteration </h3>
+								<h3>Bringing more clarity with every iteration </h3>
 								<p>I carefully considered the feedback received from potential users and a  senior designer I connected with on LinkedIn. With each iteration, the experience was simplified and improved.
 </p><br>
 						</div></div>
@@ -373,7 +373,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 								</p>
 								<img src="images/thriveiteration1.png" class="img-responsive">
 						</div>
-</div><br><br><br><br><br><br>
+</div><br><br><br><br>
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<p>
@@ -382,9 +382,6 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 </div>
 </div>
 
-						<!-- <p>1. show recipe progression
-							2. show profile progression
-						</p> -->
 	</div>
 	</div>
 </section>
@@ -395,16 +392,23 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Visual Design</h4>
-								<h3>Style Guide</h3><br><br>
+								<h3>Being intentional with every design decision</h3>
+<p><a target="_blank" href="https://kminjin.github.io/images/thrivestyleguide.png">style guide</a><br><br>
+
+<span style="font-weight:600;">1. Typography</span><br>
+	I wanted to work with a typeface that can be used for headers, body copy, and captions. I knew I wanted use a sans-serif to bring a modern, concise feel to the app. I decided to go with Source Sans Pro that works very well in UIs for its simplistic nature to enhance legibility.<br><br>
+	<span style="font-weight:600;">2. UI </span><br>Originally, I experimented with creating entirely new UI components but learned early on during testing that users weren't comfortable with my patterns. I ultimately turned to Google Design Material Guidelines for buttons (focused, enabled, FABs).<br><br>
+
+	<span style="font-weight:600;">3. Color </span><br>I wanted my app to have a white background to make sure the content is easy to read but still be exciting so I opted for a <span style="color: #fd7660;">bright orange</span> for the most important action button and a <span style="color: #1b89b6;">complementary teal for other UI buttons.
 
 						</div></div>
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<p>
 								</p>
 								<img src="images/thrivestyleguide.png" class="img-responsive">
 						</div>
-	</div>
+	</div> -->
 	</div>
 </section>
 
